--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@
 
 <h1>Welcome :)</h1>
 <div class="jean'>
-<img src="jean.jpg" height="550" width="400" alt="photo of me"
+<img src="WebPrototype/jean.jpg" height="550" width="400" alt="photo of me"
 style="float: left; margin-right: 10px; margin-bottom: 5px;"/>
 
 <p> 
