--- a/hello.html
+++ b/hello.html
@@ -1,13 +1,33 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title> Home </title>
 </head>
 <body>
+	<nav>
+		<ul>
+			<li><a href="homepage.html">Home</a></li>
+			<li><a href="Movement.html">Movement</a></li>
+			<li><a href="about.html">About</a></li>
+		</ul>
+	</nav>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Welcome :)</h1>
+<div class="parent'>
+<img src="WebPrototype/jean.jpg" height="550" width="400"
+style="float: left; margin-right: 10px; margin-bottom: 5px;"/>
+
+<p> 
+Hello everyone! The art movement I'd like to share about is 
+</br>
+the rise of the Lowbrow aka Pop Surrealism movement. 
+</br>
+Feel free to look around.
+</br>
+
+</p>
+</div>
 
 </body>
 </html>
-
