--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,14 +7,14 @@
 	<nav>
 		<ul>
 			<li><a href="homepage.html">Home</a></li>
-			<li><a href="Movement.html">Movement</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="Movement">Movement</a></li>
+			<li><a href="about">About</a></li>
 		</ul>
 	</nav>
 
 <h1>Welcome :)</h1>
-<div class="parent'>
-<img src="WebPrototype/jean.jpg" height="550" width="400"
+<div class="jean'>
+<img src="media/jean.jpg" height="550" width="400"
 style="float: left; margin-right: 10px; margin-bottom: 5px;"/>
 
 <p> 
