--- a/hello.html
+++ b/hello.html
@@ -24,7 +24,7 @@
 
 <section id="section1">
 <center>
-	<img src="/Media/jean.jpg" height="350" width="400"/>
+	<img src="Media/jean.jpg" height="350" width="400"/>
 
 	<div class="text">
 		Hello everyone!
