--- a/hello.html
+++ b/hello.html
@@ -46,9 +46,9 @@
 </center>
 </section>
 <div class="image-grid">
-<img src="media/jean 3.jpg" height="500" width="550"/>
-<img src="media/jean 2.jpg" height="500" width="750"/>
-<img src="media/godzilla.jpg" height="500" width="500"/>
+<img src="Media/jean 3.jpg" height="500" width="550"/>
+<img src="Media/jean 2.jpg" height="500" width="750"/>
+<img src="Media/godzilla.jpg" height="500" width="500"/>
 
 </div>
 </br>
