--- a/hello.html
+++ b/hello.html
@@ -46,7 +46,7 @@
 </center>
 </section>
 <div class="image-grid">
-<img src="Media/jean03.jpg" height="500" width="550"/>
+<img src="Media/jean03.jpg", height="500", width="550"/>
 <img src="Media/jean02.jpg" height="500" width="750"/>
 <img src="Media/godzilla.jpg" height="500" width="500"/>
 
